# deskodon

./: .gitignore  Cargo.toml  LICENSE  README.md  elm.json  flake.nix  rust-toolchain.toml  tauri.conf.json
.github/: dependabot.yml
.github/workflows/: ci.yml  commit-lint.yml  flake-update-nixpkgs.yml  flake-update-rust-overlay.yml  flake-update-unstable.yml  fmt.yml
app/: Cargo.toml
app/src/: application.rs  configuration.rs  error.rs  main.rs  state.rs
frontend/: Cargo.toml  index.html
frontend/public/: glue.js
frontend/src/: error.rs  lib.rs  main.rs  message.rs  model.rs  route.rs  tauri.rs  util.rs  view.rs
frontend/src/view/: app.rs  auth.rs  button.rs  home.rs  input.rs  login.rs  mod.rs  notification.rs  registration.rs  unauthorized.rs  waiting_for_authcode.rs
frontend/ui/: connectbox.slint  gui.slint  input.slint  main.slint  menubar.slint  page.slint  sidebar.slint
frontend/ui/components/: progress.slint
frontend/ui/pages/: about.slint  authorization.slint  loading.slint  login.slint  main.slint  my_profile.slint  settings.slint
lib/: Cargo.toml
lib/src/: command.rs  event.rs  lib.rs  mpsc.rs
nix/: elm2nix.nix
src/: config.rs  main.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser.rs  commands.rs  error.rs  login.rs  main.rs  mastodon.rs  state.rs
src/app/: column.rs  deskodon.rs  message.rs  mod.rs  state.rs  toot.rs
src/mastodon/: access_token.rs  auth.rs  mastodon.rs  mod.rs
src/ui/: app.rs  message.rs  mod.rs
types/: Cargo.toml
types/src/: access_token.rs  auth.rs  authorization_code.rs  error.rs  lib.rs  login.rs
ui/: index.html
