[package]
name = "deskodon"
version = "0.1.0"
edition = "2021"

authors = ["Matthias Beyer <mail@beyermatthias.de>"]
description = "Mastodon Desktop Application"
keywords = ["social", "mastodon", "GUI"]
readme = "README.md"
license = "GPL-2.0"
repository = "https://github.com/matthiasbeyer/deskodon"
homepage = "http://github.com/matthiasbeyer/deskodon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo"] }
futures = "0.3"
getset = "0.1"
megalodon = "0.2"
miette = { version = "5.4", features = [ "fancy" ] }
open = "3.0"
scraper = "0.13"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = ["rt", "macros", "fs"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
xdg = "2.4"

[dependencies.iced]
version = "0.5"
default-features = false
features = ["wgpu", "tokio", "debug"]


[dependencies.iced_native]
version = "0.6.1"
default-features = false


[dependencies.iced_style]
version = "0.5.0"
default-features = false

