[package]
name = "deskodon-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mastodon-async = { version = "1", default-features = false, features = ["rustls-tls"] }
futures = "0.3"
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "net", "io-util", "macros"] }
toml = "0.8"
tracing-subscriber = "0.3"
tracing = "0.1"
xdg = "2.5"

deskodon-frontend = { path = "../frontend" }
deskodon-lib = { path = "../lib" }
