[package]
name = "deskodon-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "net", "io-util", "macros"] }
tracing.workspace = true
slint.workspace = true

mastodon-async = { version = "1", default-features = false, features = ["rustls-tls"] }
open = "5"
serde = "1"
toml = "0.8"
tracing-subscriber = "0.3"
url = { workspace = true, features = ["serde"] }
xdg = "2.5"

deskodon-frontend = { path = "../frontend" }
deskodon-lib = { path = "../lib" }
