[package]
name = "deskodon-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deskodon-types = { version = "0.1.0", path = "../types" }
js-sys = "0.3.61"
log = "0.4"
seed = "0.9.2"
serde-wasm-bindgen = "0.5.0"
thiserror = "1"
url = "2.3.1"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2"

