[package]
name = "deskodon"
version = "0.1.0"
description = "The Deskodon App"

authors = ["Matthias Beyer <mail@beyermatthias.de>"]
keywords = ["social", "mastodon", "GUI"]
readme = "README.md"
license = "GPL-2.0"
repository = "https://github.com/matthiasbeyer/deskodon"
homepage = "http://github.com/matthiasbeyer/deskodon"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
futures = "0.3"
log = "0.4"
mastodon-async = { git = "https://github.com/matthiasbeyer/mastodon-async", branch = "split-entities-crate", package = "mastodon-async" }
open = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2.3", features = ["api-all", "devtools"] }
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
toml = "0.5"
tracing = "0.1"
url = { version = "2.3", features = ["serde"] }
xdg = "2.4"

deskodon-types = { version = "0.1.0", path = "../types" }

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
